Dark mode fixes

--- a/src/stylesheets/dark-mode.css
+++ b/src/stylesheets/dark-mode.css
@@ -1,22 +1,21 @@
 @import 'lookbook/dist/lookbook-dark-mode.css';
 
-:root {
-  /* stylelint-disable-next-line */
-  color-scheme: light dark;
-}
-
 @media (prefers-color-scheme: dark) {
   .lookback-logo {
     fill: var(--blue-20);
   }
 
   .preview-block {
-    background-color: var(--grey-100);
+    background-color: var(--background-color);
     border: 0;
+
+    & + pre {
+      @apply rounded-lg;
+    }
   }
 
   .sidebar {
-    background-color: var(--grey-90);
+    background-color: var(--grey-100);
 
     h2 {
       color: var(--blue-10);
